[project]
name = "sai-chat"
version = "0.1.2"
description = "Simple AI interface to chat with your LLM models from the terminal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "inquirer>=3.4.1",
    "peewee>=3.19.0",
    "python-dotenv>=1.2.1",
    "rich>=14.3.2",
]

[project.scripts]
sai = "app.__main__:main"

[project.urls]
Homepage = "https://github.com/luisgdev/sai"
Repository = "https://github.com/luisgdev/sai"
Issues = "https://github.com/luisgdev/sai/issues"
Documentation = "https://github.com/luisgdev/sai#readme"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""
